<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/btPlay"
        android:src="@android:drawable/ic_media_play"
        android:contentDescription="@string/media_play" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:id="@+id/tvMediaTitle"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/btUp"
        android:tint="@android:color/holo_blue_dark"
        android:src="@android:drawable/arrow_up_float"
        android:contentDescription="@string/up_arrow" />

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/btDown"
        android:tint="@android:color/holo_green_dark"
        android:src="@android:drawable/arrow_down_float"
        android:contentDescription="@string/down_arrow" />

</LinearLayout>